splash screen finished ; tree finished
We now just need to  edite the .js files !

--- a/appsources/SafeCrash/www/index.html
+++ b/appsources/SafeCrash/www/index.html
@@ -25,9 +25,25 @@ By Hadrien Casadesus
         <title>SafeCrash | Home</title>
     </head>
     <body>  
-        <p>
-            See splash -> <a href="splash.html">SPLASH</a>
-        </p>
+        <div>
+            <h1 class="title">SafeCrash</h1>
+        </div>
+        <div class="subtitle">
+            <p>The little thing that can save your life</p>
+        </div>
+        <div class="box">
+            <a href="./pages/emergency-contacts.html" class="btn btn-white btn-animation-1">Add Emergency Contacts</a> 
+        </div>
+        <div class="em-contact-title">
+            <p> Emergency Contacts:</p>
+        </div>
+        <div class="em-contact-list" id="em-contact-list">
+            <ul class="list" id="em-list">
+
+            </ul>
+        </div>
+
+        <footer><p>Made in 🇫🇷 with ❤️ <br>By Hadrien Casadesus</p></footer>
         <script src="cordova.js"></script>
         <script src="js/index.js"></script>
     </body>
