We can now save contacts in the phone

--- a/appsources/SafeCrash/www/index.html
+++ b/appsources/SafeCrash/www/index.html
@@ -50,6 +50,8 @@ By Hadrien Casadesus
 
         <footer><p>Made in 🇫🇷 with ❤️ <br>By Hadrien Casadesus</p></footer>
         <script src="cordova.js"></script>
+        <script src="js/db/pouchdb.js"></script>
+        <script src="js/db/pouchdb.cordova-sqlite.js"></script>
         <script src="js/index.js"></script>
     </body>
 </html>
