Added Contact functions
When we add a contact it's automaticly displayed on the page. We also can delete a contact.

--- a/appsources/SafeCrash/www/index.html
+++ b/appsources/SafeCrash/www/index.html
@@ -25,7 +25,7 @@ By Hadrien Casadesus
         <link rel="stylesheet" href="css/index.css">
         <title>SafeCrash | Home</title>
     </head>
-    <body>  
+    <body onload="onloadJS()">  
         <div>
             <h1 class="title">SafeCrash</h1>
         </div>
@@ -39,9 +39,6 @@ By Hadrien Casadesus
             <p id="printtest">Emergency Contacts:</p>
         </div>
         <div class="em-contact-list" id="em-contact-list">
-            <ul class="list" id="em-list">
-
-            </ul>
         </div>
 
         <div id="CONSOLEContainer">
