--- a/appsources/SafeCrash/www/index.html
+++ b/appsources/SafeCrash/www/index.html
@@ -45,9 +45,12 @@ By Hadrien Casadesus
         </div>
         <div class="em-contact-list" id="em-contact-list">
         </div>
-
-        <div id="CONSOLEContainer">
-            <p id="console"></p>
+        
+        <div class="bound" id="boundSafeCrashContainer">
+            <button onclick="Bound()" class="bound-btn" id="bound-btn">Bound SafeCrash</button>
+        </div>
+        <div id="boudnStaetContainer">
+            <p id="boundState"></p>
         </div>
 
         <footer class="footer"><p>Made in 🇫🇷 with ❤️ <br>By Hadrien Casadesus</p></footer>
