--- a/appsources/SafeCrash/www/index.html
+++ b/appsources/SafeCrash/www/index.html
@@ -54,10 +54,10 @@ By Hadrien Casadesus
             <div class="bound" id="boundSafeCrashContainer">
                 <button onclick="Bound()" class="bound-btn" id="bound-btn">Bound SafeCrash</button>
             </div>
-            <div>
+            <div class="cachebox">
                 <p>If you changed your SafeCrash Device please delete the intrnal cash before doing a bound/rebound</p>
                 <br>
-                <button onclick="clearDB()" class="clearbtn">Clear Cash</button>
+                <button onclick="clearDB()" class="cacheb">Clear Cache</button>
             </div>
 
         </div>  
