--- a/appsources/SafeCrash/platforms/android/app/src/main/assets/www/index.html
+++ b/appsources/SafeCrash/platforms/android/app/src/main/assets/www/index.html
@@ -48,9 +48,10 @@ By Hadrien Casadesus
             <p id="printtest">Emergency Contacts List:</p>
         </div>
         <div class="dropdown">
-            <button onclick="seeContacts()" class="dropbtn">Contact List</button>
-            <div id="dropdown" class="dropdown-content">
-            </div>
+            <details>
+                <summary>Contact List</summary>
+                <ul id="contact-list-ul"></ul>
+            </details>
         </div>
         <br>
         <div id="boudnStaetContainer">
